--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.sticky-top {
+  position: sticky;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.footerContent {
+  margin: 20px 0;
+  padding: 5px;
+}
+
+.footer {
+  background-color: #343a40;
+  color: rgba(255, 255, 255, 0.5);
+  justify-content: center;
+}
+
+#footer-icons {
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+#footer-icons a {
+  color: inherit;
+  margin: 0 10px;
+}
+
+#footer-icons a:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+.categories {
+  text-align: center;
+}
+
+.responsive {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+}
+
+.catContainer {
+  width: 70%;
+}
+
+.catCard {
+  text-align: center;
+  color: black;
+}
+.card a {
+  color: inherit;
+  text-decoration: none;
 }
